Gaim: The Pimpin' Penguin IM Client that's good for the soul!

version 1.1.0:
	New Features:
	* Binary relocable. Gaim will find its files even if it's installed
	  in a location other than the --prefix it was ./configured with.
	  Pass --disable-binreloc to ./configure to disable.
	* IRC now has fallback encodings, and tries harder to display
	  something useful during an encoding error.
	Bug Fixes:
	* Fix crashes when removing buddies in certain situations (Andrew Hart)
	* Eliminate MSN switchboard errors (Felipe Contreras)
	* Fix MSN buddy icon syncronization (Felipe Contreras)
	* Correctly display file transfer dialogs for filenames containing &, < or >
	* Correctly display MSN authorization dialogs for friendly names containing
	  &, < or >

version 1.0.3 (11/11/2004):
	Bug Fixes:
	* Jabber authentication fixes (Michael Plump)
	* Yahoo buddy idle reporting is more accurate (Evan Schoenberg)
	* "Allow All" privacy setting works on Yahoo (Peter Lawler)
	* Fix a crash when dragging a buddy to the conversation entry area
	* Fix a crash removing chats from the buddy list
	* Correctly display buddy pounces for aliases with &, < or > in them
	* Correctly follow the per-conversation logging option

version 1.0.2 (10/19/2004):
	Bug Fixes:
	* MSN file transfers work on big endian machines (Jean-Francois Roy and
	  Evan Schoenberg)
	* Fixed the MSN signon crash with Miranda users in the buddy list
	* Fixed sending messages to MSN Web Messenger users (Damien Ayers)
	* Fixed some memory leaks in the MSN plugin (Evan Schoenberg)
	* Fixed a crash viewing certain MSN user profiles (Evan Schoenberg)
	* Fixed a crash sending a file on MSN when the file is unreadable
	* Fixed a crash deleting accounts (Andrew Hart)
	* Fixed a crash inviting to chats (Andrew Hart)
	* Fixed a bug in Yahoo privacy handling (Peter Lawler)
	* Fixed a crash trying to join a chat from the docklet when not signed in
	  to a chat-capable account (Daniel Atallah)

version 1.0.1 (10/07/2004):